created BaseResourceRepository, SQLAlchemyResourceRepository, and added tests

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,24 @@
 # Database Configuration
+# Choose database backend: "sqlite" or "mongodb"
+DATABASE_TYPE=sqlite
 DATABASE_URL=sqlite:///./app.db
+
+# MongoDB Configuration (only required when DATABASE_TYPE=mongodb)
+# For local MongoDB:
+# DATABASE_TYPE=mongodb
+# DATABASE_URL=mongodb://localhost:27017
+# MONGODB_DATABASE=fastapi_crud
+
+# For MongoDB Atlas (cloud):
+# DATABASE_TYPE=mongodb
+# DATABASE_URL=mongodb+srv://username:password@cluster.mongodb.net/?retryWrites=true&w=majority
+# MONGODB_DATABASE=fastapi_crud
+
+# Optional MongoDB settings:
+# MONGODB_USERNAME=username
+# MONGODB_PASSWORD=password
+# MONGODB_AUTH_SOURCE=admin
+# MONGODB_TIMEOUT=5000
 
 # API Configuration
 API_HOST=0.0.0.0
