--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ uvicorn[standard]==0.24.0
 sqlalchemy==2.0.23
 aiosqlite==0.19.0
 greenlet==3.0.1
+motor==3.3.2
+pymongo==4.6.1
 
 # Validation
 pydantic==2.5.0
