--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ ENV/
 # Testing
 .pytest_cache/
 .coverage
+coverage.xml
 htmlcov/
 .hypothesis/
 
@@ -54,3 +55,7 @@ Thumbs.db
 
 # Logs
 *.log
+
+# Documentation
+docs/build/
+docs/source/_build/
