--- a/pytest.ini
+++ b/pytest.ini
@@ -8,6 +8,10 @@ addopts =
     -v
     --tb=short
     --strict-markers
+    --cov=app
+    --cov-report=html
+    --cov-report=xml
+    --cov-report=term-missing
 
 markers =
     property: Property-based tests using Hypothesis
