--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,10 @@ htmlcov/
 # Environment variables
 .env
 .env.local
+.env.production
+.env.*.local
+config/.env.production
+config/.env.*.local
 
 # OS
 .DS_Store
