--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,8 @@ httpx==0.25.2
 
 # Development
 python-dotenv==1.0.0
+
+# Documentation
+sphinx>=7.2.0
+sphinx-rtd-theme>=2.0.0
+sphinx-autodoc-typehints>=1.25.0
