--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,8 @@ pydantic==2.5.0
 pydantic-settings==2.1.0
 
 # Testing
-pytest==7.4.3
-pytest-asyncio==0.21.1
+pytest>=8.2,<10
+pytest-asyncio==1.3.0
 hypothesis==6.92.1
 httpx==0.25.2
 
