--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,10 +47,7 @@ jobs:
 
       - name: Run tests with coverage
         run: |
-          pytest --cov=app --cov-report=xml --cov-report=html --cov-fail-under=80
-        env:
-          DATABASE_TYPE: sqlite
-          DATABASE_URL: sqlite:///./test.db
+          pytest --cov=fastapi_crud_cli --cov-report=xml --cov-report=html
 
       - name: Upload coverage reports
         if: matrix.python-version == '3.11'
