--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,8 @@ motor==3.3.2
 pymongo==4.6.1
 
 # Validation
-pydantic==2.7.0
-pydantic-settings==2.1.0
+pydantic>=2.7.0,<3.0.0
+pydantic-settings>=2.1.0,<3.0.0
 
 # Testing
 pytest
