--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,38 @@ API_RELOAD=True
 
 # CORS Configuration
 CORS_ORIGINS=["http://localhost:3000", "http://localhost:8000"]
+
+# OpenTelemetry Configuration
+# Enable/disable observability features
+OTEL_ENABLED=true
+
+# Service identification
+OTEL_SERVICE_NAME=fastapi-crud-backend
+OTEL_SERVICE_VERSION=1.0.0
+
+# OTLP Endpoints
+# Choose one of the following configurations:
+
+# Option 1: Local OpenTelemetry Collector (for development)
+OTEL_OTLP_ENDPOINT=http://localhost:4317
+OTEL_OTLP_INSECURE=true
+
+# Option 2: Grafana Cloud (for production)
+# Uncomment and configure the following for Grafana Cloud:
+# OTEL_OTLP_ENDPOINT=https://otlp-gateway-prod-us-east-0.grafana.net/otlp
+# GRAFANA_CLOUD_API_TOKEN=your_api_token_here
+# GRAFANA_CLOUD_INSTANCE_ID=your_instance_id
+# OTEL_OTLP_INSECURE=false
+
+# Optional: Separate endpoints for each telemetry type
+# OTEL_OTLP_METRICS_ENDPOINT=http://localhost:4317
+# OTEL_OTLP_TRACES_ENDPOINT=http://localhost:4317
+# OTEL_OTLP_LOGS_ENDPOINT=http://localhost:4317
+
+# Export Configuration
+# Metrics export interval in milliseconds (default: 60000 = 60 seconds)
+OTEL_METRICS_EXPORT_INTERVAL_MS=60000
+
+# Trace sampling rate (0.0 to 1.0, where 1.0 = 100% sampling)
+# Use lower values in production to reduce overhead (e.g., 0.1 for 10%)
+OTEL_TRACES_SAMPLE_RATE=1.0
