--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,23 @@ httpx==0.25.2
 # Development
 python-dotenv==1.0.0
 
+# OpenTelemetry Core
+opentelemetry-api==1.21.0
+opentelemetry-sdk==1.21.0
+
+# OpenTelemetry Instrumentation
+opentelemetry-instrumentation-fastapi==0.42b0
+opentelemetry-instrumentation-sqlalchemy==0.42b0
+opentelemetry-instrumentation-pymongo==0.42b0
+
+# OTLP Exporters
+opentelemetry-exporter-otlp-proto-grpc==1.21.0
+opentelemetry-exporter-otlp-proto-http==1.21.0
+
+# Logging integration
+opentelemetry-instrumentation-logging==0.42b0
+python-json-logger==2.0.7
+
 # Documentation
 sphinx>=7.2.0
 sphinx-rtd-theme>=2.0.0
