--- a/boo-package-manager/requirements.txt
+++ b/boo-package-manager/requirements.txt
@@ -7,6 +7,7 @@ pydantic-settings>=2.1.0
 # Database Dependencies
 motor>=3.3.2
 pymongo>=4.6.0
+
 # Development Dependencies
 pytest>=7.4.3
 pytest-asyncio>=0.21.1
@@ -15,3 +16,44 @@ hypothesis>=6.92.0
 black>=23.12.0
 ruff>=0.1.8
 mypy>=1.7.1
+
+# Validation
+pydantic>=2.7.0,<3.0.0
+pydantic-settings>=2.1.0,<3.0.0
+
+# Testing
+pytest
+pytest-asyncio
+pytest-cov
+hypothesis==6.92.1
+httpx==0.25.2
+
+# Development
+python-dotenv==1.0.0
+
+# OpenTelemetry Core
+opentelemetry-api==1.21.0
+opentelemetry-sdk==1.21.0
+
+# OpenTelemetry Instrumentation
+opentelemetry-instrumentation-fastapi==0.42b0
+opentelemetry-instrumentation-pymongo==0.42b0
+
+# OTLP Exporters
+opentelemetry-exporter-otlp-proto-grpc==1.21.0
+opentelemetry-exporter-otlp-proto-http==1.21.0
+
+# Logging integration
+opentelemetry-instrumentation-logging==0.42b0
+python-json-logger==2.0.7
+
+# Documentation
+sphinx>=7.2.0
+sphinx-rtd-theme>=2.0.0
+sphinx-autodoc-typehints>=1.25.0
+
+# CLI Tools
+click==8.1.7
+rich==13.7.0
+jinja2==3.1.2
+pyyaml==6.0.1
